@@ -25,6 +25,8 @@ Revision 4.2.2
   module namespace so it could be used by ManagedObjects implementations.
 - When running on Python3, SMI will re-raise exceptions with the original
   traceback for easier diagnostics.
+- Fix to legacy MibBuilder.getMibPath() to prevent it from missing
+  .egg-based components in path.
 - Fix to oneliner configuration routine that used to implicitly
   tag SNMPv1/v2c auth and transport LCD rows what resulted in
   huge delays when processing incoming messages wish large number
